[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80" }
dotenvy = { version = "0.15.7" }
axum = { version = "0.7.4", features = ["tokio", "tracing"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "time",
  "json",
  "migrate",
  "macros",
] }
argon2 = { version = "0.5.3" }
